Implements merchant portal new features
